# ONTotalRecaller

./: .gitmodules  CMakeLists.txt  README.md  debug.cpp  ontrc_build.cpp  ontrc_call.cpp  ontrc_param.cpp  ontrc_test.cpp
include/: total_recaller.hpp  total_recaller_snps.hpp
include/internal/: definitions.hpp  fmi_trie.hpp  kmer.hpp  nanopore_signal.hpp  on_hmm.hpp
parameters/: param_424  param_7664
